novel-app-13-14/novel-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novel-app
  labels:
    app: novel-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: novel-app
  template:
    metadata:
      labels:
        app: novel-app
    spec:
      containers:
      - name: backend
        image: blentai/hands-on-k8s-canary:1.3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.25"
          limits:
            memory: "512Mi"
            cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: novel-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: novel-app
